--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+@media (max-width: 699px) {
+  html,
+  body {
+    height: unset; // fixes sticky header disappearing when scrolling more than viewport height
+  }
+}
